--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cypress": "./node_modules/.bin/cypress open"
+    "cypress": "./node_modules/.bin/cypress open",
+    "test:reporting": "node scripts/test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cypress": "^8.5.0",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "cypress-real-events": "^1.3.0"
+  },
+  "devDependencies": {
+    "@4tw/cypress-drag-drop": "^1.6.0",
+    "@applitools/eyes-cypress": "^3.20.4",
+    "@types/mocha": "^9.0.0",
+    "axios": "^0.21.1",
+    "cypress": "^6.6.0",
+    "cypress-file-upload": "^5.0.8",
+    "eslint-plugin-cypress": "^2.12.1",
+    "fs-extra": "^10.0.0",
+    "mochawesome": "^7.0.1",
+    "mochawesome-merge": "^4.2.0",
+    "mochawesome-report-generator": "^6.0.1",
+    "path": "^0.12.7",
+    "typescript": "^4.3.5"
   }
 }
